syntax = "proto3";
package proto;
option go_package = "github.com/erikjiang/grpc_demo/proto";

import "google/api/annotations.proto";

message UserRequest {
    int32 user_id = 1;
}

message UserResponse {
    int32 user_id = 1;
    string user_name = 2;
    string user_desc = 3;
}

service UserService {
    rpc GetUserInfo(UserRequest) returns (UserResponse) {
        option(google.api.http) = {
            get: "/v1/user/{user_id}"
        };
    };
}
